istiofiles/virtual-service-firefox-recommendation-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-firefox
spec:
  hosts:
   - recommendation
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Firefox.*"  
    route:
    - destination:
        host: recommendation
        subset: v2
  - route:
    - destination:
        host: recommendation
        subset: v1
