istiofiles/virtual-service-mobile-recommendation-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-mobile
spec:
  hosts:
   - recommendation
  http:
  - match:
    - headers:
        baggage-user-agent:
          regex: ".*Mobile.*"  
    route:
    - destination:
        host: recommendation
        subset: v2
  - route:
    - destination:
        host: recommendation
        subset: v1
