istiofiles/virtual-service-recommendation-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-503
spec:
  hosts:
  - recommendation
  http:
  - fault:
     delay:
        fixedDelay: 7s
        percent: 50
    route:
    - destination:
        host: recommendation
        subset: default
