istiofiles/virtual-service-recommendation-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-timeout
spec:
  hosts:
   - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: default
    timeout: 1s
