istiofiles/virtual-service-recommendation-v1_and_v2_75_25.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-v1-v2
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: v1
      weight: 75
    - destination:
        host: recommendation
        subset: v2
      weight: 25
