istiofiles/virtual-service-recommendation-v2_503.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-v2-503
spec:
  hosts:
  - recommendation
  http:
  - fault:
     abort:
        httpStatus: 503
        percent: 50
    route:
    - destination:
        host: recommendation
        subset: v2
