istiofiles/virtual-service-recommendation-v2_retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-v2-retry
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
       host: recommendation
       subset: v2
    retries:
        perTryTimeout: 2s
        attempts: 3
