istiofiles/virtual-service-safari-recommendation-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
   - recommendation
  http:
  - match:
    - headers:
        baggage-user-agent:
          regex: .*Safari.* 
    route:
    - destination:
        host: recommendation
        subset: v2
  - route:
    - destination:
        host: recommendation
        subset: v1
